--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Projects</a>
+						<a href="https://github.com/NikhilInampudi?tab=repositories" class="logo">Projects</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Projects</a></li>
+							<li class="active"><a href="https://github.com/NikhilInampudi?tab=repositories">Projects</a></li>
 							
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/nikhil-inampudi-387418224/?trk=opento_sprofile_details" class="icon brands alt fa-linkedin"><span class="label">linkedin</span></a></li>
-							<li><a href="https://github.com/NikhilInampudi/Data-Science-Projects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/NikhilInampudi"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -51,13 +51,13 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date"></span>
-									<h2><a href="https://github.com/NikhilInampudi/Data-Science-Projects">Bicycle Sales Insights with SQL and Tableau<br />
+									<h2><a href="https://github.com/NikhilInampudi/Bicycle-Sales-Analysis?tab=readme-ov-file">Bicycle Sales Insights with SQL and Tableau<br />
 									</a></h2>
 									<p>In this project, I utilized SQL Server through Azure Data Studio to design and implement a relational database, developed complex queries to extract business insights and measure key performance metrics, and created data visualizations in Tableau to effectively communicate findings. </p>
 								</header>
-								<a href="#" class="image main"><img src="images/Bicycle.jpg" alt="" /></a>
+								<a href="https://github.com/NikhilInampudi/Bicycle-Sales-Analysis?tab=readme-ov-file" class="image main"><img src="images/Bicycle.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/NikhilInampudi/Bicycle-Sales-Analysis?tab=readme-ov-file" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
